@@ -1,3 +1,12 @@
+2004-10-23  Kai Grossjohann  <kai.grossjohann@gmx.net>
+
+	* tramp-vc.el (vc-do-command): Do not advise it if
+	process-file is fboundp.
+	* tramp.el (tramp-file-name-handler-alist): Add entry for
+	process-file.
+	(tramp-handle-process-file): New function.
+	(tramp-file-name-for-operation): Support process-file.
+
 2004-10-17  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-smb.el (tramp-smb-advice-PC-do-completion): Make the
@@ -83,6 +92,9 @@
 	implementation clarifies.
 
 2004-07-17  Kai Grossjohann  <kai.grossjohann@gmx.net>
+
+	* tramp.el (tramp-handle-verify-visited-file-modtime): New
+	docstring.  From Luc Teirlinck.
 
 	Version 2.0.43 released.
 
